# booster_sim2real

./: .gitignore  .gitmodules  README.md  activate_with_ros2.sh  deploy.py
booster_bridge/: README.md  build.sh  test_robot_bridge.py
booster_bridge/ros2_ws/src/booster_hardware_bridge/: CMakeLists.txt  booster_data_plotter.py  booster_hardware_bridge.py  booster_robot_monitor.py  booster_web_plotter.py  package.xml
booster_bridge/ros2_ws/src/booster_hardware_bridge/config/: robot_config.yaml
booster_bridge/ros2_ws/src/booster_hardware_bridge/launch/: robot_bridge.launch.py  test_robot_bridge.launch.py
booster_bridge/ros2_ws/src/booster_msgs/: CMakeLists.txt  package.xml
booster_bridge/ros2_ws/src/booster_msgs/msg/: BoosterControlCmd.msg  BoosterSensorData.msg
booster_bridge/ros2_ws/src/booster_msgs/srv/: BoosterRobotMode.srv
checkpoint/: model_3200.pth
deploy/checkpoint/final_model/ocdbt.process_0/: manifest.ocdbt
deploy/checkpoint/step_0/ocdbt.process_0/: manifest.ocdbt
deploy/configs/: T1.yaml
deploy_booster/: deploy_dry.py
deploy_booster/visualize/: standalone_web_plotter_fixed.py
deploy_playground/: deploy_brax.py  deploy_brax_original.py  observation_plotter.py  observation_writer.py  standalone_web_plotter_fixed.py  test_policy_loading.py
deploy_playground/checkpoint/: env_config.json  training_results.json
deploy_playground/checkpoint/final_model/: _CHECKPOINT_METADATA  manifest.ocdbt
deploy_playground/checkpoint/step_0/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
deploy_playground/configs/: T1_brax.yaml
deploy_playground/utils/: brax_utils.py
deploy_playground/visualize/: standalone_web_plotter_fixed.py
logs/2025-09-16-19-28-58/: config.yaml
logs/2025-09-16-19-28-58/summaries/: events.out.tfevents.1758076138.romela-4090.421749.0
logs/2025-09-16-19-28-58/wandb/: latest-run
logs/2025-09-16-20-57-45/: config.yaml
logs/2025-09-16-20-57-45/summaries/: events.out.tfevents.1758081465.romela-4090.491729.0
logs/2025-09-16-20-57-45/wandb/: latest-run
logs/2025-09-16-21-00-13/summaries/: events.out.tfevents.1758081613.romela-4090.493957.0
logs/2025-09-16-21-00-13/wandb/: latest-run
logs/2025-09-16-21-01-09/: config.yaml
logs/2025-09-16-21-01-09/nn/: model_100.pth  model_1000.pth  model_10000.pth  model_1100.pth  model_1200.pth  model_1300.pth  model_1400.pth  model_1500.pth  model_1600.pth  model_1700.pth  model_1800.pth  model_1900.pth  model_19100.pt  model_200.pth  model_2000.pth  model_2100.pth  model_2200.pth  model_2300.pth  model_2400.pth  model_2500.pth  model_2600.pth  model_2700.pth  model_2800.pth  model_2900.pth  model_300.pth  model_3000.pth  model_3100.pth  model_3200.pth  model_3300.pth  model_3400.pth  model_3500.pth  model_3600.pth  model_3700.pth  model_3800.pth  model_3900.pth  model_400.pth  model_4000.pth  model_4100.pth  model_4200.pth  model_4300.pth  (+61 more)
logs/2025-09-16-21-01-09/wandb/: latest-run
logs/manual/: T1_from_ts.pth
old/: config.py  deploy_test.py  hardware_deployment_backup.py  hardware_deployment_old.py  safety_test.py  test_connection.py  test_deployment.py  utils.py
ros2_ws/src/booster_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/booster_msgs/msg/: BoosterControlCmd.msg  BoosterMotorCmd.msg
ros2_ws/src/booster_msgs/srv/: BoosterRobotMode.srv
ros2_ws/src/booster_policy_server/: CMakeLists.txt  booster_policy_server.py  booster_remote_control.py  package.xml
(+16 files in other folders)
